todo-backend/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dwk-todo-backend-ingress
  namespace: NAMESPACE
spec:
  rules:
  - host: ENVIRONMENT.todo.com
    http:
      paths:
      - path: /todos
        pathType: Prefix
        backend:
          service:
            name: todo-backend-svc
            port:
              number: 5678
